--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Mathematics of Machine Learning
-description: A personal blog of Olga Graf
+description: by Olga Graf
