--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Mathematics of Machine Learning
 description: Olga Graf's personal blog
 show_downloads: true
 
-baseurl: "/cayman-blog" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+baseurl: "/cayman-blog-master" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
 url: "https://lorepirri.github.io" # change this to the base hostname & protocol for your site
 
 
