--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mathematics of Machine Learning
-description: Olga Graf's personal blog
+title: Olga Graf's personal blog
+description: 
 show_downloads: true
 
 baseurl: # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
