--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ plugins:
 target-blank:
     rel: nofollow
 
-header_page_refs: ['now', 'about', 'contact', 'new']
+header_page_refs: ['about', 'contact']
 
 markdown: kramdown
 kramdown:
