--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Olga Graf's personal blog
+title: Olga Graf's Personal Blog
 description: Mathematics of Machine Learning
 show_downloads: true
 
@@ -18,8 +18,8 @@ theme: # leave it empty
 # social
 author: lorepirri
 image: /thumbnail-jumbo.png
-twitter:
-  username: lorepirri
+#twitter:
+  #username: lorepirri
 
 plugins:
   - jekyll-target-blank
