--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ cayman-blog:
 theme: # leave it empty
 
 # social
-author: lorepirri
+author: Olga Graf
 image: /thumbnail-jumbo.png
 #twitter:
   #username: lorepirri
