--- a/_config.yml
+++ b/_config.yml
@@ -27,5 +27,5 @@ plugins:
 target-blank:
     rel: nofollow
 
-header_page_refs: ['about', 'contact']
+header_page_refs: ['about', 'contact', 'sample']
 
